...
                <constraint firstItem="hcs-tp-t0e" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="1Up-5T-eZH"/>
                <constraint firstItem="hcs-tp-t0e" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eiV-07-fVj"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hcs-tp-t0e" secondAttribute="trailing" id="yOQ-Rx-UD0"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <userDefinedRuntimeAttributes>
                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="DetailScreen"/>
            </userDefinedRuntimeAttributes>
        </view>
    </objects>
</document>

